--- a/.github/workflows/fetch-feeds.yml
+++ b/.github/workflows/fetch-feeds.yml
@@ -10,6 +10,8 @@ on:
 jobs:
   fetch-and-deploy:
     runs-on: ubuntu-latest
+    permissions:
+      contents: write
 
     steps:
       - name: Checkout repository
